# campus_backend

./: .env  .env.example  .env.test  .gitignore  Cargo.toml  TESTING_JWT.md  build.rs  generate_token.py  init.sql  migrate_test_db.bat  test_api.py  test_data.sql  test_jwt.py  test_jwt_only.py
.kiro/steering/: course-module-spec.md
.sqlx/: config.json
campus_backend/: Cargo.toml  build.rs
campus_backend/src/: main.rs
campus_backend/src/common/: auth.rs  db.rs  dev_tools.rs  error.rs  mod.rs  state.rs
campus_backend/src/modules/: mod.rs
campus_backend/src/modules/activity/: mod.rs
campus_backend/src/modules/course/: controller.rs  entity.rs  mod.rs  service.rs
campus_backend/src/modules/forum/: controller.rs  entity.rs  mod.rs  service.rs
campus_backend/src/modules/user/: controller.rs  entity.rs  service.rs
campus_mobile/: Cargo.toml
campus_mobile/src/: lib.rs  worlds.txt
docs/: API_活动模块.md  API_课表模块.md  IMPLEMENTATION_SUMMARY.md  JWT_USAGE.md  MIGRATIONS.md  QUICK_START.md  README.md  README_COURSE_MODULE.md  TESTING.md  TESTING_GUIDE.md  TESTING_QUICK_REF.md  TESTING_SETUP.md  UPGRADE_SUMMARY.md  UPLOAD_QUICK_START.md  客户端需求.md
examples/: error_response_example.rs
migrations/: 001_create_course_tables.sql  20240101000000_create_course_tables.sql  20240102000000_create_users_table.sql  20240103000000_update_user_id_to_string.sql  20240104000000_create_upload_files_table.sql  20240105000000_create_activity_tables.sql
proto/: activity.proto  course.proto  course_pb2.py  forum.proto  upload.proto  user.proto  user_pb2.py
src/: lib.rs  main.rs
src/common/: auth.rs  db.rs  dev_tools.rs  error.rs  file_detector.rs  jwt.rs  mod.rs  state.rs  time_utils.rs
src/modules/: mod.rs
src/modules/activity/: controller.rs  entity.rs  mod.rs  routes.rs  service.rs
src/modules/bbs/: mod.rs
src/modules/course/: controller.rs  entity.rs  mod.rs  repository.rs  service.rs
src/modules/forum/: controller.rs  entity.rs  mod.rs  service.rs
src/modules/upload/: controller.rs  entity.rs  mod.rs  routes.rs  service.rs
src/modules/user/: controller.rs  entity.rs  mod.rs  service.rs
tests/: course_api_test.rs  course_service_mock_test.rs  course_service_test.rs  error_response_test.rs
tests/common/: mod.rs
