[package]
name = "campus_backend"
version = "0.1.0"
edition = "2021"

# 请确保 dependencies 只有这一个区域，不要重复
[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
# 必须开启 cors feature
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

# JWT 相关
jsonwebtoken = "9"
chrono = "0.4"

# 环境变量
dotenvy = "0.15"

# 错误处理
thiserror = "1.0"

#关键：必须开启 env-filter 才能在 main.rs 里用 EnvFilter
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 其他
axum-extra = { version = "0.9", features = ["typed-header"] }
prost = "0.12"